# dpu-backend

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
api/: CMakeLists.txt
api/include/api/: dpu.h  pidcomm.h
api/include/lowlevel/: dpu_transfer_matrix.h
api/src/: dpu_rank_handler_allocator.c
api/src/api/: dpu_memory.c  dpu_set.c
benchmarks/: CMakeLists.txt  RUN.md
benchmarks/Microbenchmark/: CMakeLists.txt  DPU_CPU_Bandwidth.c  DPU_CPU_Bandwidth_host.c
benchmarks/PID_collective_communication/: CMakeLists.txt  test_PID.c
benchmarks/naive_collective_communication/: CMakeLists.txt  test_naive.c  test_naive_host.c
benchmarks/naive_collective_communication/include/: CommOps.c  CommOps.h
bfdma/: connection_manager.cpp  connection_manager.hpp  devx.h  devx_device.cpp  devx_mr.cpp  dma_export.cpp  dma_export.h  libr.cpp  libr.hpp  mlx5_prm.h  mlx5_prm_manual.h  mr.h  multi_os_prm.h  util.hpp
commons/include/: dpu_rank_handler.h
commons/src/: dpu_predef_programs.c
example/: CMakeLists.txt  DPU_CPU_Bandwidth.c  bf_checksum.c  bf_checksum_host.c  checksum.c  checksum_host.c  test.c  test_host.c
hw/: CMakeLists.txt
hw/src/commons/: dpu_region_address_translation.h
hw/src/mappings/xeon_sp/: pid_comm.c  xeon_sp_translation.c
hw/src/rank/: hw_dpu_rank.c  hw_dpu_rank.h
naive_comm/: CMakeLists.txt
naive_comm/communication/: CMakeLists.txt  test.c
naive_comm/communication/include/: CommOps.c  CommOps.h
naive_comm/naive_alltoall/: CMakeLists.txt  naive_alltoall.c  perf_alltoall.sh  run.sh
pidcomm_lib/: Makefile
pidcomm_lib/data_relocate_clockwise/: data_relocate_clockwise.c
pimnic/: CMakeLists.txt  entities.cpp  entities.h
ufi/src/: ufi_runner.c
util/: CMakeLists.txt  util.c  util.h  utils.cpp  utils.h  virt2phys.cpp  virt2phys.h
